testsuite/tests/typecheck/should_fail/tcfail214.stderr

tcfail214.hs:9:10: error:
    • The constraint ‘F a’ is no smaller than the instance head
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘C [a]’
